Fix : overflow mob version

--- a/src/parts/main/about-us/_about-us.scss
+++ b/src/parts/main/about-us/_about-us.scss
@@ -2,6 +2,7 @@
     position: relative;
     padding: 100px 20px;
     max-width: 1350px;
+    overflow: hidden;
     margin: 0 auto;
         &::before {
             content: "";
